# Sales-Marketing-A2A-Orchestrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sales_marketing.csv
scripts/: run_pipeline.py  run_streamlit.sh
src/: a2a_utils.py  orchestrator.py
src/a2a_multiagent_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: autogen_agent.py  langchain_agent.py
